--- a/index.html
+++ b/index.html
@@ -6,36 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-do list</title>
     <script src="js/main.js"></script>
+    <script src="https://kit.fontawesome.com/63e0a49b76.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="listContainer">
-        <section class="listTop">
-            <div class="topContainer">
-                <div class="topText">
-                    To-Do List
+    <section class="listContainer">
+        <header class="header">
+            To-Do List
+        </header>
+        <ul class="items">
+            <li class="item__row">
+                <div class="item">
+                    <span class="item__name">Egg</span>
+                    <button class="item__delete">
+                        <i class="fas fa-minus"></i>
+                    </button>
                 </div>
-            </div>
-        </section>
-        <section class="listMiddle">
-            <div>
+                <div class="item__divider"></div>
+            </li>
+        </ul>
+        <footer class="footer">
 
-            </div>
-        </section>
-        <section class="listBottom">
-            <div class="bottomContainer">
-                <div class="bottomTopContainer">
+            <input type="text" value="" class="footer__input">
+            <button class="footer__button">
+                <i class="fas fa-plus"></i>
+            </button>
 
-                    <input type="text" class="bottomInputBox">
-                </div>
-                <div class="bottom btn">
-                    <button class="submitButton">click</button>
-                </div>
+        </footer>
 
-            </div>
-        </section>
-
-    </div>
+    </section>
 </body>
 </html>
