--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-do list</title>
-    <script src="js/main.js"></script>
+    <script src="js/main.js" defer></script>
     <script src="https://kit.fontawesome.com/63e0a49b76.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
@@ -17,13 +17,6 @@
         </header>
         <ul class="items">
             <li class="item__row">
-                <div class="item">
-                    <span class="item__name">Egg</span>
-                    <button class="item__delete">
-                        <i class="fas fa-minus"></i>
-                    </button>
-                </div>
-                <div class="item__divider"></div>
             </li>
         </ul>
         <footer class="footer">
