js refactored using data id

--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
 </head>
 <body>
     <section class="listContainer">
-        <header class="header">
-            To-Do List
-        </header>
+        <header class="header">To-Do List</header>
         <ul class="items">
             <li class="item__row">
+                
             </li>
         </ul>
         <footer class="footer">
